crates/stef-parser/tests/snapshots/parser__parse@attributes.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "#[deprecated = \"don't use\", compress]\n#[validate(\n    in_range(min = 100, max = 200),\n    non_empty,\n)]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attributes.stef
---
Schema {
    path: Some(
        "attributes.stef",
    ),
    source: "#[deprecated = \"don't use\", compress]\n#[validate(\n    in_range(min = 100, max = 200),\n    non_empty,\n)]\nstruct Sample\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Single(
                                Literal {
                                    value: String(
                                        "don't use",
                                    ),
                                    span: Span {
                                        start: 15,
                                        end: 26,
                                    },
                                },
                            ),
                        },
                        Attribute {
                            name: "compress",
                            value: Unit,
                        },
                        Attribute {
                            name: "validate",
                            value: Multi(
                                [
                                    Attribute {
                                        name: "in_range",
                                        value: Multi(
                                            [
                                                Attribute {
                                                    name: "min",
                                                    value: Single(
                                                        Literal {
                                                            value: Int(
                                                                100,
                                                            ),
                                                            span: Span {
                                                                start: 69,
                                                                end: 72,
                                                            },
                                                        },
                                                    ),
                                                },
                                                Attribute {
                                                    name: "max",
                                                    value: Single(
                                                        Literal {
                                                            value: Int(
                                                                200,
                                                            ),
                                                            span: Span {
                                                                start: 80,
                                                                end: 83,
                                                            },
                                                        },
                                                    ),
                                                },
                                            ],
                                        ),
                                    },
                                    Attribute {
                                        name: "non_empty",
                                        value: Unit,
                                    },
                                ],
                            ),
                        },
                    ],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 111,
                        end: 117,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
