crates/stef-parser/tests/snapshots/parser__parse@attributes_min_ws.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "#[deprecated=\"don't use\",compress]\n#[validate(in_range(min=100,max=200),non_empty)]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attributes_min_ws.stef
---
Schema {
    path: Some(
        "attributes_min_ws.stef",
    ),
    source: "#[deprecated=\"don't use\",compress]\n#[validate(in_range(min=100,max=200),non_empty)]\nstruct Sample\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Single(
                                String(
                                    "don't use",
                                ),
                            ),
                        },
                        Attribute {
                            name: "compress",
                            value: Unit,
                        },
                        Attribute {
                            name: "validate",
                            value: Multi(
                                [
                                    Attribute {
                                        name: "in_range",
                                        value: Multi(
                                            [
                                                Attribute {
                                                    name: "min",
                                                    value: Single(
                                                        Int(
                                                            100,
                                                        ),
                                                    ),
                                                },
                                                Attribute {
                                                    name: "max",
                                                    value: Single(
                                                        Int(
                                                            200,
                                                        ),
                                                    ),
                                                },
                                            ],
                                        ),
                                    },
                                    Attribute {
                                        name: "non_empty",
                                        value: Unit,
                                    },
                                ],
                            ),
                        },
                    ],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 91,
                        end: 97,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
