crates/stef-parser/tests/snapshots/parser__parse@const-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/const-basic.stef
---
Schema {
    definitions: [
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: "BOOL_TRUE",
                ty: Bool,
                value: Bool(
                    true,
                ),
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: "BOOL_FALSE",
                ty: Bool,
                value: Bool(
                    false,
                ),
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: "INT",
                ty: U32,
                value: Int(
                    100,
                ),
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: "FLOAT",
                ty: F64,
                value: Float(
                    5.5,
                ),
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: "STRING",
                ty: String,
                value: String(
                    "value",
                ),
            },
        ),
        Const(
            Const {
                comment: Comment(
                    [],
                ),
                name: "BYTES",
                ty: Bytes,
                value: Bytes(
                    [
                        1,
                        2,
                        3,
                    ],
                ),
            },
        ),
    ],
}
