crates/stef-parser/tests/snapshots/parser__parse@enum-generics.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/enum-generics.stef
---
Schema {
    definitions: [
        Enum(
            Enum {
                comment: Comment(
                    [
                        "Enum with generics.",
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: "Sample",
                generics: Generics(
                    [
                        "A",
                        "B",
                        "C",
                        "D",
                    ],
                ),
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "One",
                            span: Span {
                                start: 54,
                                end: 57,
                            },
                        },
                        fields: Unit,
                        id: Id {
                            value: 1,
                            span: Span {
                                start: 58,
                                end: 60,
                            },
                        },
                        span: Span {
                            start: 54,
                            end: 60,
                        },
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Two",
                            span: Span {
                                start: 66,
                                end: 69,
                            },
                        },
                        fields: Unnamed(
                            [
                                UnnamedField {
                                    ty: External(
                                        ExternalType {
                                            path: [],
                                            name: "A",
                                            generics: [],
                                        },
                                    ),
                                    id: Id {
                                        value: 1,
                                        span: Span {
                                            start: 72,
                                            end: 74,
                                        },
                                    },
                                    span: Span {
                                        start: 70,
                                        end: 74,
                                    },
                                },
                                UnnamedField {
                                    ty: External(
                                        ExternalType {
                                            path: [],
                                            name: "B",
                                            generics: [],
                                        },
                                    ),
                                    id: Id {
                                        value: 2,
                                        span: Span {
                                            start: 78,
                                            end: 80,
                                        },
                                    },
                                    span: Span {
                                        start: 75,
                                        end: 80,
                                    },
                                },
                            ],
                        ),
                        id: Id {
                            value: 2,
                            span: Span {
                                start: 82,
                                end: 84,
                            },
                        },
                        span: Span {
                            start: 66,
                            end: 84,
                        },
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Three",
                            span: Span {
                                start: 90,
                                end: 95,
                            },
                        },
                        fields: Named(
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field1",
                                        span: Span {
                                            start: 106,
                                            end: 112,
                                        },
                                    },
                                    ty: External(
                                        ExternalType {
                                            path: [],
                                            name: "C",
                                            generics: [],
                                        },
                                    ),
                                    id: Id {
                                        value: 1,
                                        span: Span {
                                            start: 116,
                                            end: 118,
                                        },
                                    },
                                    span: Span {
                                        start: 106,
                                        end: 118,
                                    },
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field2",
                                        span: Span {
                                            start: 128,
                                            end: 134,
                                        },
                                    },
                                    ty: External(
                                        ExternalType {
                                            path: [],
                                            name: "D",
                                            generics: [],
                                        },
                                    ),
                                    id: Id {
                                        value: 2,
                                        span: Span {
                                            start: 138,
                                            end: 140,
                                        },
                                    },
                                    span: Span {
                                        start: 128,
                                        end: 140,
                                    },
                                },
                            ],
                        ),
                        id: Id {
                            value: 3,
                            span: Span {
                                start: 148,
                                end: 150,
                            },
                        },
                        span: Span {
                            start: 90,
                            end: 150,
                        },
                    },
                ],
            },
        ),
    ],
}
